Fixed spacing around icon

--- a/app/styles/alert.less
+++ b/app/styles/alert.less
@@ -6,7 +6,7 @@
   border: 1px solid var(--color-border-default);
   border-radius: var(--border-radius-md);
   padding: var(--spacing-px-9);
-  gap: var(--spacing-px-12);
+  gap: var(--spacing-px-6);
   background-color: var(--color-gray-50);
 
   .text-container {
@@ -24,6 +24,12 @@
       a {
         color: var(--color-blue-600);
       }
+    }
+  }
+
+  .icon {
+    i {
+      width: 19px;
     }
   }
 
